# NexTime

./: HOW-TO-BUILD.sh  SETUP-ENV.bash
doc/: GEMINI.md  OVERVIEW.md
hw/: .gitignore  Library.kicad_sym  NexTime.kicad_pcb  NexTime.kicad_prl  NexTime.kicad_pro  NexTime.kicad_sch  fp-info-cache
hw/Library.pretty/: 614150291.kicad_mod  ER-CON40HB-2.kicad_mod  EVQPUC02K.kicad_mod  KEYSTONE-3035.kicad_mod  R82DC4100AA60K.kicad_mod  RV3032C7.kicad_mod  TAA5212.kicad_mod
sw/: CMakeLists.txt  prj.conf
sw/src/: shellcmds.cpp
